--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-	"name": "obsidian-sample-plugin",
-	"version": "1.0.0",
-	"description": "This is a sample plugin for Obsidian (https://obsidian.md)",
+	"name": "obsidian-featured-image",
+	"version": "0.1.0",
+	"description": "Sets a featured image property from first Youtube link or first image in document. You can use this to show thumbnail previews in Dataview.",
 	"main": "main.js",
 	"scripts": {
 		"dev": "node esbuild.config.mjs",
@@ -12,7 +12,9 @@
 	"author": "",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/axios": "^0.9.36",
 		"@types/node": "^16.11.6",
+		"@types/sharp": "^0.31.1",
 		"@typescript-eslint/eslint-plugin": "5.29.0",
 		"@typescript-eslint/parser": "5.29.0",
 		"builtin-modules": "3.3.0",
@@ -20,5 +22,9 @@
 		"obsidian": "latest",
 		"tslib": "2.4.0",
 		"typescript": "4.7.4"
+	},
+	"dependencies": {
+		"jimp": "^1.3.0",
+		"sharp": "^0.33.5"
 	}
 }
