--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Featured Image",
 	"version": "1.0.0",
 	"minAppVersion": "1.4.4",
-	"description": "Sets a featured image property from first Youtube link or image in document. You can use this to show thumbnail previews for all your documents in Dataview.",
+	"description": "Featured Image is a powerful and highly optimized plugin for Obsidian that automatically sets a featured image property in your notes based on the first image, YouTube link, or Auto Card Link image in your document. This allows you to create rich note galleries similar to Apple Notes, Bear and Evernote in Obsidian.",
 	"author": "Johan Sanneblad",
 	"authorUrl": "https://github.com/johansan",
 	"fundingUrl": "https://buymeacoffee.com/johansan",
