--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 	"name": "Featured Image",
 	"version": "1.0.0",
 	"minAppVersion": "1.4.4",
-	"description": "Featured Image is a powerful and highly optimized plugin for Obsidian that automatically sets a featured image property in your notes based on the first image, YouTube link, or Auto Card Link image in your document. This allows you to create rich note galleries similar to Apple Notes, Bear and Evernote in Obsidian.",
+	"description": "Featured Image automatically sets a featured image property in your notes based on the first image, YouTube link, or Auto Card Link image found in your document. This allows you to create rich note galleries using Folder Notes and Dataview.",
 	"author": "Johan Sanneblad",
 	"authorUrl": "https://github.com/johansan",
 	"fundingUrl": "https://buymeacoffee.com/johansan",
