--- a/manifest.json
+++ b/manifest.json
@@ -1,9 +1,9 @@
 {
 	"id": "featured-image",
 	"name": "Featured Image",
-	"version": "1.0.0",
+	"version": "1.0.1",
 	"minAppVersion": "1.4.4",
-	"description": "Sets a featured image property from first Youtube link or image in document. You can use this to show thumbnail previews for all your documents in Dataview.",
+	"description": "Sets a featured image property from first image, Youtube link or Auto Card Link in your document. You can use this to show thumbnail previews for all your documents.",
 	"author": "Johan Sanneblad",
 	"authorUrl": "https://github.com/johansan",
 	"fundingUrl": "https://buymeacoffee.com/johansan",
