--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,25 @@ main.js
 # Exclude sourcemaps
 *.map
 
-# obsidian
-data.json
-
 # Exclude macOS Finder (System Explorer) View States
 .DS_Store
+
+# Ignore local user AI rules
+.github/copilot-instructions.md
+.cursorrules
+.cursorignore
+AGENTS.md
+CLAUDE.md
+GEMINI.md
+
+# Ignore local build script
+scripts/build-local.sh
+
+# Release lock file
+.release.lock
+
+# Web site
+web/
+
+# Obsidian
+.obsidian
