--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "@eslint/compat": "^1.3.2",
     "@eslint/js": "^9.32.0",
     "@types/node": "^18.19.120",
     "builtin-modules": "^5.0.0",
@@ -28,6 +27,7 @@
     "eslint": "^9.32.0",
     "eslint-plugin-obsidianmd": "^0.1.4",
     "globals": "^15.14.0",
+    "knip": "^5.64.3",
     "obsidian": "latest",
     "prettier": "^3.6.2",
     "tslib": "^2.8.1",
