--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "eslint-plugin-obsidianmd": "^0.1.4",
     "globals": "^15.14.0",
     "knip": "^5.64.3",
-    "obsidian": "latest",
+    "obsidian": "^1.11.0",
     "prettier": "^3.6.2",
     "tslib": "^2.8.1",
     "typescript": "^5.8.3",
